# KoRE

./: .gitignore  CMakeLists.txt  GuiApplication.vcxproj  GuiApplication.vcxproj.filters  KoRE.sln  KoRE.vcxproj  KoRE.vcxproj.filters  KoRE_GUI.sln  SceneViewer.vcxproj  SceneViewer.vcxproj.filters  mingw32-dependencies.rar
MainGLFW/: main.cpp
assets/meshes/: FullscreenTriangle.dae  JustATest.dae  Square.dae  cube.dae
assets/shader/: FullScreen.fp  FullScreen.vp  GUI_Test.fp  GUI_Test.vp  simple.fp
cmake/: clean-all.cmake  clean-dependencies.cmake
core/src/: meshloader.cpp  rendermanager.cpp  rendermeshop.cpp  scenemanager.cpp  scenenode.cpp  scenenodecomponent.cpp  shader.cpp
demos/: CMakeLists.txt
demos/MainGLFW/: CMakeLists.txt  main.cpp
demos/MainQT5/: CMakeLists.txt  glwindow.cpp  glwindow.h  main.cpp
doc/: Flow.txt  Qt_HowToConfigure.txt
ext/lib/: GLFW.lib
include/core/: common.h  meshloader.h  rendermanager.h  resourcemanager.h  ressourcemanager.h
mainglfw/src/: main.cpp
project/: core.vcxproj  core.vcxproj.filters
scripts/: fixEncoding.py
src/KoRE/: Common.h  Events.h  FrameBuffer.cpp  FrameBuffer.h  GLerror.h  IDManager.cpp  IDManager.h  IndexedBuffer.cpp  Log.cpp  Mesh.cpp  Mesh.h  MeshLoader.h  RenderManager.cpp  RenderManager.h  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  ShaderData.h  ShaderInput.cpp  ShaderInput.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureBuffer.cpp  TextureSampler.cpp  TextureSampler.h  core.vcxproj  core.vcxproj.filters
(+115 files in other folders)
